# pcp-project-g5

./: .gitignore  EJEMPLOS_HU04.md  ENTREGA-HU04.md  FLUJO-VISUAL-HU04.md  HU-04-OPTIMIZACION.md  HU-04-RESUMEN-EJECUTIVO.md  LICENSE  QUICK_START_HU04.md  README-HU04.md  README.md  START_HERE.txt  requirements-hu04.txt  setup_hu04.ps1  yolov8n_widerface.ipynb
datasets/widerface/: convert_labels.py  data.yaml  prepare_dataset.sh
notebooks/: detect_faces.ipynb  pruebas-hito2.md  real_time_app.ipynb  yolov8n_widerface.ipynb
scripts/: CMakeLists.txt  benchmark_batch_size.py  capture_faces.py  check_hu04_setup.py  detectorRostros.py  export_to_tensorrt.py  pipeline-paralela-prueba.py  pipeline-secuencial-prueba.py  pipeline_batch.py  pipeline_full.py  pipeline_paralela.py  pipeline_paralela_batches.py  pipeline_paralelo.cpp  pipeline_secuencial.cpp  pipeline_secuencial.py  pipeline_secuencial_cpu.py  pipeline_secuencial_cuda.py  pipeline_yolo.cpp  prepare_dataset.sh  setup_hu04.py  setup_widerface.sh  train_lbph.py  validate_models.py  yolo_tensorrt_detector.cpp
yolov8n-widerface-v1/: results.csv
yolov8n-widerface-v2/: results.csv
yolov8n-widerface-v3/: results.csv
